Dockerコンテナ用の作業ディレクトリと実行ファイルの追加
このコミットでは、アプリの実行と依存関係のインストールの両方について、Dockerのセットアップに追加の設定が含まれています。docker-compose.yml に、各コンテナ内の作業ディレクトリ `/app` が追加されました。これにより、アプリケーションコマンドの実行方法が曖昧にならなくなりました。Dockerfileの`go.mod`ファイルでは、ADDの代わりにCOPYコマンドを使用することで、Dockerのキャッシュをより有効に活用し、より効率的なビルドを実現しました。最後に、メインGoファイルのビルドと実行を自動化するために、新しい`run.sh`ファイルが作成された。これにより、コンテナ内でアプリケーションを実行するために必要なステップが減りました。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command: ${GOLANG_COMMAND}
     stdin_open: true
     tty: true
+    working_dir: /app
     volumes:
       - ./src:/app
     environment:
