--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 
 RUN go install github.com/cosmtrek/air@v1.29.0
 
-ADD ./src/go.mod /app
+COPY ./src/go.mod /app
 RUN go mod download
 RUN go mod tidy
+
